Project tags + project thumbnails (incl. default)

--- a/templates/_layout.html
+++ b/templates/_layout.html
@@ -7,7 +7,7 @@
         <title>brentmaas.space</title>
         {% endif %}
         <link rel="stylesheet" href="{{url_for('static', filename='css/style.css')}}">
-        <link rel="icon" type="image/png", href="{{url_for('static', filename='images/favicon.png')}}">
+        <link rel="icon" type="image/png" href="{{url_for('static', filename='images/favicon.png')}}">
         <script type="text/javascript" src="{{url_for('static', filename='script/navbar.js')}}"></script>
     </head>
     <body onload="setNavbar()">
