--- a/static/css/style.css
+++ b/static/css/style.css
@@ -4,6 +4,14 @@
     --navbar-toggle-size: 64px;
 }
 
+@media only screen and (max-width: 1200px) {
+    :root {
+        --content-margin-left: 25px;
+        --navbar-width: 200px;
+        --navbar-toggle-size: 48px;
+    }
+}
+
 body {
     background: #001342;
     font-family: Helvetica;
@@ -117,4 +125,21 @@ div.project {
 
 img.project-button {
     height: 32pt;
+}
+
+img.project-thumb {
+    width: calc(30vw - var(--navbar-width) / 2);
+}
+
+@media only screen and (max-width: 1200px) {
+    div.projects {
+        display: grid;
+        width: auto;
+        gap: 64pt;
+        grid-template-columns: repeat(1, minmax(0, 1fr));
+    }
+    
+    img.project-thumb {
+        width: calc(80vw - var(--navbar-width));
+    }
 }
