More planned projects and some minor brushing up

--- a/templates/index.html
+++ b/templates/index.html
@@ -6,7 +6,7 @@
 
 <h1 class="title">Under construction</h1>
 <p>This site is currently under construction and will eventually start featuring a couple of astronomical projects.</p>
-<p>Content on these projects will be added and expanded upon throughout December and January.</p>
+<p>Content on these projects will be added and expanded upon starting December 2022.</p>
 
 <p class="subtitle">Cookies and tracking and such</p>
 <p>No data is being obtained in any way, shape, or form. Consequently, no personal data is being processed either.</p>
