--- a/templates/project/brentmaas.space/index.html
+++ b/templates/project/brentmaas.space/index.html
@@ -2,7 +2,7 @@
 
 {% block projectcontent %}
 
-<p>This site! While it's currently just a showcase for projects, I hope to expand it to become part of some projects at some point.</p>
+<p>This site! While it's currently just a showcase for projects, I hope to expand it to become part of some projects at a later point in time.</p>
 <p>More details will follow later.</p>
 
 {% endblock %}
